samples/_failures_safe/1761562838_40255d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a1551ccb.c: In function ‘display_statistics’:
./samples/SAFE/__tmp_a1551ccb.c:126:15: error: expected ‘;’ at end of input
  126 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_a1551ccb.c:126:9: error: expected declaration or statement at end of input
  126 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_a1551ccb.c:126:9: error: expected declaration or statement at end of input
